// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Code component rendering tests code - renders block code with className 1`] = `
<div>
  <pre
    class="bg-slate-100 p-3 rounded my-2 overflow-x-auto"
  >
    <code
      class="text-sm font-mono"
    >
      const x = 10;
    </code>
  </pre>
</div>
`;

exports[`Code component rendering tests code - renders inline code without className 1`] = `
<div>
  <code
    class="bg-slate-100 px-1.5 py-0.5 rounded text-sm font-mono"
  >
    inline code
  </code>
</div>
`;

exports[`Formatting components rendering tests blockquote - renders blockquote with correct classes 1`] = `
<div>
  <blockquote
    class="border-l-4 border-slate-300 pl-4 italic my-2"
  >
    Quote text
  </blockquote>
</div>
`;

exports[`Formatting components rendering tests del - renders strikethrough text with correct classes 1`] = `
<div>
  <del
    class="line-through text-slate-500"
  >
    Deleted text
  </del>
</div>
`;

exports[`Formatting components rendering tests em - renders italic text with correct classes 1`] = `
<div>
  <em
    class="italic"
  >
    Italic text
  </em>
</div>
`;

exports[`Formatting components rendering tests strong - renders bold text with correct classes 1`] = `
<div>
  <strong
    class="font-bold"
  >
    Bold text
  </strong>
</div>
`;

exports[`Formatting components rendering tests u - renders underlined text with correct classes 1`] = `
<div>
  <u
    class="underline"
  >
    Underlined text
  </u>
</div>
`;

exports[`Heading components rendering tests h1 - renders heading with center alignment 1`] = `
<div>
  <h1
    class="text-2xl font-bold my-3 text-center"
  >
    Centered Heading 1
  </h1>
</div>
`;

exports[`Heading components rendering tests h1 - renders heading with left alignment 1`] = `
<div>
  <h1
    class="text-2xl font-bold my-3 text-left"
  >
    Left Aligned Heading 1
  </h1>
</div>
`;

exports[`Heading components rendering tests h1 - renders heading with right alignment 1`] = `
<div>
  <h1
    class="text-2xl font-bold my-3 text-right"
  >
    Right Aligned Heading 1
  </h1>
</div>
`;

exports[`Heading components rendering tests h1 - renders heading without alignment 1`] = `
<div>
  <h1
    class="text-2xl font-bold my-3 "
  >
    Heading 1
  </h1>
</div>
`;

exports[`Heading components rendering tests h2 - renders heading with center alignment 1`] = `
<div>
  <h2
    class="text-xl font-bold my-2 text-center"
  >
    Centered Heading 2
  </h2>
</div>
`;

exports[`Heading components rendering tests h2 - renders heading with left alignment 1`] = `
<div>
  <h2
    class="text-xl font-bold my-2 text-left"
  >
    Left Aligned Heading 2
  </h2>
</div>
`;

exports[`Heading components rendering tests h2 - renders heading with right alignment 1`] = `
<div>
  <h2
    class="text-xl font-bold my-2 text-right"
  >
    Right Aligned Heading 2
  </h2>
</div>
`;

exports[`Heading components rendering tests h2 - renders heading without alignment 1`] = `
<div>
  <h2
    class="text-xl font-bold my-2 "
  >
    Heading 2
  </h2>
</div>
`;

exports[`Heading components rendering tests h3 - renders heading with center alignment 1`] = `
<div>
  <h3
    class="text-lg font-bold my-2 text-center"
  >
    Centered Heading 3
  </h3>
</div>
`;

exports[`Heading components rendering tests h3 - renders heading with left alignment 1`] = `
<div>
  <h3
    class="text-lg font-bold my-2 text-left"
  >
    Left Aligned Heading 3
  </h3>
</div>
`;

exports[`Heading components rendering tests h3 - renders heading with right alignment 1`] = `
<div>
  <h3
    class="text-lg font-bold my-2 text-right"
  >
    Right Aligned Heading 3
  </h3>
</div>
`;

exports[`Heading components rendering tests h3 - renders heading without alignment 1`] = `
<div>
  <h3
    class="text-lg font-bold my-2 "
  >
    Heading 3
  </h3>
</div>
`;

exports[`List components rendering tests li - renders list item with correct classes 1`] = `
<div>
  <li
    class="ml-4"
  >
    List item
  </li>
</div>
`;

exports[`List components rendering tests ol - renders ordered list with correct classes 1`] = `
<div>
  <ol
    class="list-decimal list-inside space-y-1 my-2"
  >
    <li>
      Item 1
    </li>
    <li>
      Item 2
    </li>
  </ol>
</div>
`;

exports[`List components rendering tests ul - renders unordered list with correct classes 1`] = `
<div>
  <ul
    class="list-disc list-inside space-y-1 my-2"
  >
    <li>
      Item 1
    </li>
    <li>
      Item 2
    </li>
  </ul>
</div>
`;

exports[`Paragraph component rendering tests p - renders paragraph with center alignment 1`] = `
<div>
  <p
    class="my-2 text-center"
  >
    Centered text
  </p>
</div>
`;

exports[`Paragraph component rendering tests p - renders paragraph with left alignment 1`] = `
<div>
  <p
    class="my-2 text-left"
  >
    Left aligned text
  </p>
</div>
`;

exports[`Paragraph component rendering tests p - renders paragraph with right alignment 1`] = `
<div>
  <p
    class="my-2 text-right"
  >
    Right aligned text
  </p>
</div>
`;

exports[`Paragraph component rendering tests p - renders paragraph without alignment 1`] = `
<div>
  <p
    class="my-2 "
  >
    Paragraph text
  </p>
</div>
`;

exports[`Utility components rendering tests br - renders line break 1`] = `
<div>
  <br />
</div>
`;

exports[`Utility components rendering tests hr - renders horizontal rule with correct classes 1`] = `
<div>
  <hr
    class="my-4 border-slate-300"
  />
</div>
`;
